# 2B2T-Queue-Notifier

./: .gitignore  2B2T-Queue-Notifier.csproj  App.xaml  App.xaml.cs  CODE_OF_CONDUCT.md  DataGet.cs  MainWindow.xaml  MainWindow.xaml.cs  README.md  Settings.md  Settings.xaml  Settings.xaml.cs  VirusTotal.md  version.json
.github/workflows/: ci.yml  codeql-analysis.yml  dotnet-desktop.yml
Installer/: CMakeLists.txt
Installer/src/: common.cpp  common.hpp  console.cpp  console.hpp  main.cpp  setup.cpp  setup.hpp
installer/: Cargo.toml
installer/src/: color.rs  main.rs
new/: Cargo.toml  build.rs
new/assets/: error_report.md
new/src/: application.rs  assets.rs  common.rs  main.rs  panic.rs  queue.rs  queue_monitor.rs  settings.rs
new/src/application/: mod.rs  ui.rs
new/src/misc/: assets.rs  common.rs  mod.rs
new/src/style/: dark.rs  mod.rs
src/: 2B2T-Queue-Notifier.csproj  2B2T-Queue-Notifier.sln  App.xaml  App.xaml.cs  DataGet.cs  IniFile.cs  MainWindow.xaml  MainWindow.xaml.cs  Settings.xaml  Settings.xaml.cs
